CSL-1286: Fix alert contrast issue

--- a/src/frontend/scss/site-themes/_theme-night.scss
+++ b/src/frontend/scss/site-themes/_theme-night.scss
@@ -602,6 +602,6 @@ $alert-primary-border-color:            $popover-border-color;
 $alert-primary-hover-color:             $link-hover-color;
 
 $alert-secondary-bg:                    #fd6;
-$alert-secondary-color:                 $body-color;
+$alert-secondary-color:                 #333;
 $alert-secondary-border-color:          transparent;
 $alert-secondary-hover-color:           $link-hover-color;
